@@ -1,5 +1,5 @@
 bossaddr $uplinkaddr$
 mailEditor msged ; scan
-pollCmd echo polling %s >> $logdir$/husky.log ; ifcico %s >> $logdir$/husky.log ; toss > /dev/null
+pollCmd echo polling %s >> $logdir$/husky.log ; ifcico %s >> $logdir$/husky.log && toss > /dev/null
 logFile $logdir$/husky.log
 numLogLines 1000
